[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Images/Backgrounds/Forest.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Battle/EnemyPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/TheWildBreathOfZelda.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Battle/AttackItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Battle/NextProfile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Battle/CharacterPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Battle/Battle.gd" type="Script" id=10]

[sub_resource type="GradientTexture" id=1]

[sub_resource type="DynamicFont" id=2]
size = 114
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 160
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 3 )

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopScreen" type="MarginContainer" parent="."]
margin_right = 1440.0
margin_bottom = 1820.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="TopScreen"]
margin_right = 1440.0
margin_bottom = 1820.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen"]
margin_right = 1440.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Wild Forest"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseLine" type="Line2D" parent="TopScreen"]
points = PoolVector2Array( 0, 120, 1440, 120 )
default_color = Color( 0, 0, 0, 1 )

[node name="DisplayArea" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 140.0
margin_right = 1420.0
margin_bottom = 1800.0
rect_min_size = Vector2( 700, 848 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleBoard" type="VBoxContainer" parent="DisplayArea"]
margin_right = 1400.0
margin_bottom = 1660.0
rect_min_size = Vector2( 700, 848 )

[node name="Combat" type="ScrollContainer" parent="DisplayArea/BattleBoard"]
margin_right = 1400.0
margin_bottom = 1227.0
rect_min_size = Vector2( 700, 596 )
mouse_filter = 1
size_flags_vertical = 3

[node name="Characters" type="HBoxContainer" parent="DisplayArea/BattleBoard/Combat"]
margin_right = 1370.0
margin_bottom = 1461.0
rect_min_size = Vector2( 690, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_constants/separation = 20

[node name="AllFriendlies" type="GridContainer" parent="DisplayArea/BattleBoard/Combat/Characters"]
margin_right = 690.0
margin_bottom = 1461.0
rect_min_size = Vector2( 345, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 114
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Friendly" parent="DisplayArea/BattleBoard/Combat/Characters/AllFriendlies" instance=ExtResource( 6 )]
margin_bottom = 487.0

[node name="Friendly2" parent="DisplayArea/BattleBoard/Combat/Characters/AllFriendlies" instance=ExtResource( 6 )]
margin_left = 402.0
margin_right = 690.0
margin_bottom = 487.0

[node name="Friendly3" parent="DisplayArea/BattleBoard/Combat/Characters/AllFriendlies" instance=ExtResource( 6 )]
margin_top = 487.0
margin_bottom = 974.0

[node name="Friendly4" parent="DisplayArea/BattleBoard/Combat/Characters/AllFriendlies" instance=ExtResource( 6 )]
margin_left = 402.0
margin_top = 487.0
margin_right = 690.0
margin_bottom = 974.0

[node name="Friendly5" parent="DisplayArea/BattleBoard/Combat/Characters/AllFriendlies" instance=ExtResource( 6 )]
margin_top = 974.0
margin_bottom = 1461.0

[node name="Friendly6" parent="DisplayArea/BattleBoard/Combat/Characters/AllFriendlies" instance=ExtResource( 6 )]
margin_left = 402.0
margin_top = 974.0
margin_right = 690.0
margin_bottom = 1461.0

[node name="AllEnemies" type="GridContainer" parent="DisplayArea/BattleBoard/Combat/Characters"]
margin_left = 710.0
margin_right = 1370.0
margin_bottom = 1461.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 84
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" parent="DisplayArea/BattleBoard/Combat/Characters/AllEnemies" instance=ExtResource( 2 )]
margin_bottom = 487.0

[node name="Enemy2" parent="DisplayArea/BattleBoard/Combat/Characters/AllEnemies" instance=ExtResource( 2 )]
margin_left = 372.0
margin_right = 660.0
margin_bottom = 487.0

[node name="Enemy3" parent="DisplayArea/BattleBoard/Combat/Characters/AllEnemies" instance=ExtResource( 2 )]
margin_top = 487.0
margin_bottom = 974.0

[node name="Enemy4" parent="DisplayArea/BattleBoard/Combat/Characters/AllEnemies" instance=ExtResource( 2 )]
margin_left = 372.0
margin_top = 487.0
margin_right = 660.0
margin_bottom = 974.0

[node name="Enemy5" parent="DisplayArea/BattleBoard/Combat/Characters/AllEnemies" instance=ExtResource( 2 )]
margin_top = 974.0
margin_bottom = 1461.0

[node name="Enemy6" parent="DisplayArea/BattleBoard/Combat/Characters/AllEnemies" instance=ExtResource( 2 )]
margin_left = 372.0
margin_top = 974.0
margin_right = 660.0
margin_bottom = 1461.0

[node name="MidLine" type="Line2D" parent="DisplayArea/BattleBoard"]
points = PoolVector2Array( 700, -20, 700, 1230 )
default_color = Color( 0, 0, 0, 1 )

[node name="TurnSystem" type="VBoxContainer" parent="DisplayArea/BattleBoard"]
margin_top = 1231.0
margin_right = 1400.0
margin_bottom = 1660.0
size_flags_vertical = 0

[node name="BaseLine2" type="Line2D" parent="DisplayArea/BattleBoard/TurnSystem"]
points = PoolVector2Array( -20, 0, 1420, 0 )
default_color = Color( 0, 0, 0, 1 )

[node name="CurrentCharacter" type="Label" parent="DisplayArea/BattleBoard/TurnSystem"]
margin_right = 1400.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Current Turn: Alrune"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="BaseLine3" type="Line2D" parent="DisplayArea/BattleBoard/TurnSystem"]
points = PoolVector2Array( -20, 85, 1420, 85 )
default_color = Color( 0, 0, 0, 1 )

[node name="ScrollContainer2" type="ScrollContainer" parent="DisplayArea/BattleBoard/TurnSystem"]
margin_top = 89.0
margin_right = 1400.0
margin_bottom = 429.0
rect_min_size = Vector2( 0, 340 )
mouse_filter = 1
size_flags_vertical = 0

[node name="NextTurns" type="HBoxContainer" parent="DisplayArea/BattleBoard/TurnSystem/ScrollContainer2"]
margin_right = 1400.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="NextProfile" parent="DisplayArea/BattleBoard/TurnSystem/ScrollContainer2/NextTurns" instance=ExtResource( 5 )]
margin_right = 160.0
margin_bottom = 224.0

[node name="NextProfile2" parent="DisplayArea/BattleBoard/TurnSystem/ScrollContainer2/NextTurns" instance=ExtResource( 5 )]
margin_left = 170.0
margin_right = 330.0
margin_bottom = 224.0

[node name="AttackBoard" type="GridContainer" parent="DisplayArea"]
visible = false
margin_right = 1400.0
margin_bottom = 1660.0
rect_min_size = Vector2( 700, 848 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="AttackScrollBar" type="ScrollContainer" parent="DisplayArea/AttackBoard"]
margin_right = 1400.0
margin_bottom = 1460.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="AttacksList" type="VBoxContainer" parent="DisplayArea/AttackBoard/AttackScrollBar"]
margin_right = 1400.0
margin_bottom = 1670.0
rect_min_size = Vector2( 0, 639 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 10

[node name="AttackItem" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_right = 1388.0

[node name="AttackItem2" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_top = 210.0
margin_right = 1388.0
margin_bottom = 410.0

[node name="AttackItem3" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_top = 420.0
margin_right = 1388.0
margin_bottom = 620.0

[node name="AttackItem4" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_top = 630.0
margin_right = 1388.0
margin_bottom = 830.0

[node name="AttackItem5" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_top = 840.0
margin_right = 1388.0
margin_bottom = 1040.0

[node name="AttackItem6" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_top = 1050.0
margin_right = 1388.0
margin_bottom = 1250.0

[node name="AttackItem7" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_top = 1260.0
margin_right = 1388.0
margin_bottom = 1460.0

[node name="AttackItem8" parent="DisplayArea/AttackBoard/AttackScrollBar/AttacksList" instance=ExtResource( 4 )]
margin_top = 1470.0
margin_right = 1388.0
margin_bottom = 1670.0

[node name="BackButton" type="Button" parent="DisplayArea/AttackBoard"]
margin_top = 1460.0
margin_right = 1400.0
margin_bottom = 1660.0
rect_min_size = Vector2( 700, 200 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "BACK"

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.014
anchor_top = 0.719
anchor_right = 0.986
anchor_bottom = 0.789
margin_left = -0.16
margin_top = -0.640015
margin_right = 0.159912
margin_bottom = 0.160034
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UpperButtons" type="HBoxContainer" parent="Buttons"]
margin_right = 1399.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 20

[node name="Attack" type="Button" parent="Buttons/UpperButtons"]
margin_right = 453.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "ATTACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="Buttons/UpperButtons"]
margin_left = 473.0
margin_right = 926.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "ITEMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abilities" type="Button" parent="Buttons/UpperButtons"]
margin_left = 946.0
margin_right = 1399.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "ABILITIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerButtons" type="HBoxContainer" parent="Buttons"]
margin_top = 100.0
margin_right = 1399.0
margin_bottom = 180.0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 20

[node name="EndTurn" type="Button" parent="Buttons/LowerButtons"]
margin_right = 689.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "END TURN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retreat" type="Button" parent="Buttons/LowerButtons"]
margin_left = 709.0
margin_right = 1399.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "RETREAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleText" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 2020.0
margin_right = 1420.0
margin_bottom = 2560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0, 0.811765, 1, 1 )
custom_constants/line_separation = -6
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DisplayArea/AttackBoard/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Buttons/UpperButtons/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Buttons/UpperButtons/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="Buttons/UpperButtons/Abilities" to="." method="_on_Abilities_pressed"]
[connection signal="pressed" from="Buttons/LowerButtons/EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="Buttons/LowerButtons/Retreat" to="." method="_on_Retreat_pressed"]
